--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CustomView</string>
     <string name="title_radar">radar</string>
     <string name="title_circle">circle</string>
+    <string name="title_search">search</string>
 </resources>
