--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_radar">radar</string>
     <string name="title_circle">circle</string>
     <string name="title_search">search</string>
+    <string name="title_test">test</string>
 </resources>
