--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_circle">circle</string>
     <string name="title_search">search</string>
     <string name="title_test">test</string>
+    <string name="title_control">remote-control</string>
 </resources>
